all except footer

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -109,4 +109,9 @@
     font-style: normal;
 }
 
-
+@font-face {
+    font-family: 'Hammersmith One';
+    src: url('fonts/hammersmith_One/HammersmithOne-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
