--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,6 @@
 body {
     font-family: Roboto;
     color: white;
-    box-sizing: border-box;
     width: 100%;
 }
 
@@ -15,20 +14,22 @@ body {
 }
 
 .header { 
+    max-width: 1600px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
     padding-top: 15px;
-    margin-left: 331px;
-    margin-right: 329px;
+    padding-left: 331px;
+    padding-right: 329px;
     
 }
 
 .logo-title {
-    font-size: 30pt;
+    font-size: 20pt;
     color: #00E0D0; 
     font-weight: 100;
-    /* width: 73px; */
+    margin-right: 286px;
 }
     
 .logo-pic {
@@ -37,11 +38,18 @@ body {
     margin-right: 11px;
 }
 
+.logo:last-of-type {
+    justify-content: flex-start;
+    flex-shrink: 0;
+    margin:0;
+}
+
 .logo {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin-right: 286px;
+    align-items: center;
 }
 
 .nav {
@@ -97,6 +105,11 @@ body {
     text-align: center;
 }
 
+.content:last-of-type {
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+
 .button, .button-1, .button-2 {
     background-color: transparent;
     border: 1px solid #00E0D0;
@@ -112,10 +125,16 @@ body {
 
 .button {
     margin: auto;
+    margin-top: 31px;
 }
 
 .button-1 {
     margin-top: 31px;
+}
+
+.button-1:last-child {
+    margin-top: 31px;
+    margin-bottom: 70px;
 }
 
 .button-2 {
@@ -125,11 +144,10 @@ body {
     font-family: "Hammersmith One", sans-serif;
     font-weight: 900;
     font-size: 9pt;
-    margin-bottom: 69px;
 }
 
 .button-2:last-child {
-    margin: 0;
+    margin: auto;
 }
 
 .story {
@@ -235,17 +253,22 @@ p {
     margin-bottom: 48px;
 }
 
-.row {
+.grid-row {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    border-bottom: 1px solid #ebebeb;
+}
+
+.grid-row:last-child {
+    padding-bottom: 68px;
+    border-bottom: none;
 }
 
 .section {
     width: 318px;
     height: 250px;
     padding-bottom: 39px;
-    border-bottom: 1px solid #ebebeb;
     border-right: 1px solid #ebebeb;
 
 }
@@ -297,6 +320,7 @@ p {
     display: flex;
     flex-flow: column;
     align-items: center;
+    justify-content: flex-start
 }
 
 .team-title {
@@ -319,7 +343,6 @@ p {
     display: flex;
     flex-flow: row;
 }
-
 
 .team-grid-element {
     margin-right: 20px;
@@ -367,7 +390,7 @@ p {
 
 }
 
-.works-title {
+.works-title {   
     text-transform: uppercase;
     color: rgba(65, 61, 75, 255);
     font-weight: 700;
@@ -443,14 +466,18 @@ a {
 }
 
 .contact-form {
+    height: 654px;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
+    padding-top: 72px;
+    padding-bottom: 70px;
 }
 
-.form {
+.form, .clients {
     display: flex;
     flex-direction: column;
+    padding-right: 100px;
 }
 
 .clients {
@@ -459,6 +486,120 @@ a {
 }
 
 .clients-container {
+    /* padding-top: 47px; */
+    width: 380px;
+    height: 100%;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+
+}
+
+input:last-of-type {
+    height: 200px;
+}
+
+input, input:first-of-type {
+    width: 460px;
+    height: 45px;
+    text-transform: capitalize;
+    margin-top: 23px;
+    border: 1px solid #e5e5e5;
+    padding-left:21px;
+    font-family: Roboto;
+    font-weight: 100;
+    font-size: 9pt;
+    color: #e5e5e5;
+}
+
+input:first-of-type {
+    margin-top: 35px;
+}
+
+.subscription-input {
+    width: 211px;
+    height: 45px;
+    background: none;
+    border: 1px solid #e5e5e5; 
+}
+
+.footer {
+    background-image: url("../img/background5.png"), linear-gradient(45deg, #1a0033, #6600cc);
+    background-blend-mode: overlay; 
+    height: 400px;
+    padding-left: 330px;
+    padding-right: 330px;
+    padding-top: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.first-row {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.first-row-column {
+    max-width: 283px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.column-title {
+    text-transform: uppercase;
+    font-weight: 900;
+}
+
+.column-content {
+    font-weight: 100;
+}
+
+.footer-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.footer-pic {
+    margin-right: 16px;
+}
+
+
+.second-row {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: stretch;
+    padding-bottom: 72px;
+}
+
+.second-row-column:last-child {
+    font-size: 9pt;
+    font-weight: 400;
+    justify-content: flex-end;
+}
+
+.second-row-column {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.second-row-column-element {
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 9pt;
 }
