--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,7 +29,7 @@ body {
     font-size: 20pt;
     color: #00E0D0; 
     font-weight: 100;
-    margin-right: 286px;
+    /* margin-right: 286px; */
 }
     
 .logo-pic {
@@ -38,17 +38,11 @@ body {
     margin-right: 11px;
 }
 
-.logo:last-of-type {
-    justify-content: flex-start;
-    flex-shrink: 0;
-    margin:0;
-}
-
 .logo {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-right: 286px;
+    /* margin-right: 286px; */
     align-items: center;
 }
 
@@ -411,6 +405,11 @@ a {
     max-width: 100%;
 }
 
+.works-pic {
+    display: inline-flex;
+    padding-left: 10px;
+}
+
 .works-img {
     display: block;
     border: none;
@@ -508,10 +507,9 @@ input:last-of-type {
 }
 
 input, input:first-of-type {
-    width: 460px;
     height: 45px;
     text-transform: capitalize;
-    margin-top: 23px;
+    /* margin-top: 23px; */
     border: 1px solid #e5e5e5;
     padding-left:21px;
     font-family: Roboto;
@@ -520,9 +518,9 @@ input, input:first-of-type {
     color: #e5e5e5;
 }
 
-input:first-of-type {
-    margin-top: 35px;
-}
+ input {
+    width: 460px;
+ }
 
 .subscription-input {
     width: 211px;
@@ -534,72 +532,123 @@ input:first-of-type {
 .footer {
     background-image: url("../img/background5.png"), linear-gradient(45deg, #1a0033, #6600cc);
     background-blend-mode: overlay; 
+    font-size: 11pt;
     height: 400px;
-    padding-left: 330px;
-    padding-right: 330px;
     padding-top: 70px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    align-content: space-around;
 }
 
-.first-row {
-    width: 100%;
+.footer-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.logo:nth-last-of-type(2) {
+    width: 283px;
+    display: flex;
+    justify-content: flex-start;
+} 
+
+.footer-column {
+    width: 283px;
+    display: flex;
+    flex-direction: column;        
+}
+
+.footer-content {
+    font-weight: 300;
     display: flex;
     flex-direction: row;
 }
 
-.first-row-column {
-    max-width: 283px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-}
-
-.column-title {
+.footer-title {
     text-transform: uppercase;
     font-weight: 900;
-}
-
-.column-content {
-    font-weight: 100;
-}
-
-.footer-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+    text-align: left;
 }
 
 .footer-pic {
     margin-right: 16px;
 }
 
+.footer-input {
+    width: 211px;
+    height: 45px;
+    background: none;
+    border: solid 1px white;
+    margin: 0px;
+    padding: 0px;
+}
 
-.second-row {
-    width: 100%;
+.subscribe {
     display: flex;
     flex-direction: row;
-    justify-content: stretch;
-    padding-bottom: 72px;
 }
 
-.second-row-column:last-child {
-    font-size: 9pt;
-    font-weight: 400;
-    justify-content: flex-end;
+.footer-input::placeholder {
+    color: white;
+    font-family: Roboto;
+    font-weight: 100;
 }
 
-.second-row-column {
-    width: 100%;
+.subscribe-button {
+    border: none;
+    background-color: rgba(255, 255, 255, 0.7);
+    width: 70px;
+    height: 45px;
+    margin-left: 10px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.networks {
+    width: 283px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: flex-start;
 }
 
-.second-row-column-element {
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 9pt;
+.networks-pic {
+    border: 1px solid white;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    
 }
+
+.networks-logo {
+    margin: auto;
+    align-content: center;
+    justify-content: center;
+}
+
+.last-row {
+    max-width: 938px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.last-row-column {
+    width: 301px;
+    display: flex;
+    flex-direction: row; 
+    justify-content: space-evenly;   
+}
+
+.last-row-column:nth-last-of-type(1) {
+    flex-grow: 2;
+}
+
+
+.last-row-column-item {
+    text-transform: uppercase;
+}
+
