full layout without responsivness

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,22 +2,26 @@ body {
     font-family: Roboto;
     color: white;
     width: 100%;
+    max-width: 100%;
 }
 
 .container {
-    height: 670px;
-    max-height: 100%;
+    max-width: 100%;
+    /* height: 670px; */
+    /* max-height: 100%; */
     background-image: url("../img/background.png"), linear-gradient(45deg, #1a0033, #6600cc);
     background-blend-mode: overlay; 
     display: flex;
     flex-direction: column;
 }
 
-.header { 
-    max-width: 1600px;
+
+.header {
+    width: 100%;
+    max-width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     padding-top: 15px;
     padding-left: 331px;
@@ -29,7 +33,7 @@ body {
     font-size: 20pt;
     color: #00E0D0; 
     font-weight: 100;
-    /* margin-right: 286px; */
+    margin-right: 286px;
 }
     
 .logo-pic {
@@ -42,7 +46,6 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    /* margin-right: 286px; */
     align-items: center;
 }
 
@@ -120,6 +123,7 @@ body {
 .button {
     margin: auto;
     margin-top: 31px;
+    margin-bottom: 207px;
 }
 
 .button-1 {
@@ -389,6 +393,7 @@ p {
     color: rgba(65, 61, 75, 255);
     font-weight: 700;
     font-family: "Playfair Display";
+    margin-bottom: 35px;
 }
 
 a {
@@ -487,7 +492,7 @@ a {
 .clients-container {
     /* padding-top: 47px; */
     width: 380px;
-    height: 100%;
+    height: 409px;;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -498,7 +503,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 
 }
 
@@ -520,6 +525,7 @@ input, input:first-of-type {
 
  input {
     width: 460px;
+    margin-bottom: 23px;
  }
 
 .subscription-input {
@@ -551,12 +557,15 @@ input, input:first-of-type {
     width: 283px;
     display: flex;
     justify-content: flex-start;
+    align-items: flex-start;
 } 
 
 .footer-column {
     width: 283px;
+    height: 139px;
     display: flex;
-    flex-direction: column;        
+    flex-direction: column; 
+    justify-content: space-between;      
 }
 
 .footer-content {
@@ -575,12 +584,12 @@ input, input:first-of-type {
     margin-right: 16px;
 }
 
+
 .footer-input {
     width: 211px;
     height: 45px;
     background: none;
     border: solid 1px white;
-    margin: 0px;
     padding: 0px;
 }
 
@@ -630,21 +639,23 @@ input, input:first-of-type {
 }
 
 .last-row {
-    max-width: 938px;
+    width: 100%;
+    max-width: 1100px;
+    margin: auto;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .last-row-column {
     width: 301px;
     display: flex;
     flex-direction: row; 
-    justify-content: space-evenly;   
+    justify-content: space-between;   
 }
 
 .last-row-column:nth-last-of-type(1) {
-    flex-grow: 2;
+    width: 226px;
 }
 
 
@@ -652,3 +663,16 @@ input, input:first-of-type {
     text-transform: uppercase;
 }
 
+
+@media screen
+    and (min-device-width: 3200px)
+    and (max-device-width: 480px) {
+        .container {
+            height: 100%;
+        }
+
+        .header {
+            padding: 0;
+            
+        }
+    }
